--- a/projects/EMCGCN-ASTE/main.cfg
+++ b/projects/EMCGCN-ASTE/main.cfg
@@ -9,18 +9,18 @@ do_train= true
 do_eval= False
 do_predict= False
 # None, steps, epoch
-evaluation_strategy= steps
+evaluation_strategy= epoch
 eval_steps= 4500
 per_device_train_batch_size= 2
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 64
+per_device_eval_batch_size= 2
 eval_accumulation_steps= 1
 seed= 42
 fp16= True
 # 是否使用cuda
 no_cuda= false
 load_best_model_at_end= True
-metric_for_best_model= F1
+metric_for_best_model= f_triplets_utm
 # 决定 metric_for_best_model 是越大越好，还是越小越好。比如loss是越小越好
 greater_is_better= True
 label_names= [labels]
@@ -99,7 +99,8 @@ postfix = debug
 temp_dir = ${Trainer:output_dir}/temp_dir
 best_model_file = ${Trainer:output_dir}/best_model/best.pt
 log_file = ${Trainer:output_dir}/log_${postfix}.txt
-
+dev_pred_file = ${Save:temp_dir}/dev_pred_file.json
+test_pred_file = ${Save:temp_dir}/test_pred_file.json
 
 [Network]
 do_hp_search = False
@@ -113,6 +114,7 @@ num_layers = 1
 pooling = 'avg'
 symmetry_decoding = False
 relation_constraint = True
+task = 'triplet'
 
 [data]
 vocab_file = projects/EMCGCN-ASTE/data/vocab.pkl
