--- a/projects/EMCGCN-ASTE/main.cfg
+++ b/projects/EMCGCN-ASTE/main.cfg
@@ -1,19 +1,19 @@
 [Trainer]
 # The output directory where the model predictions and checkpoints will be written.
-output_dir = projects/EMCGCN-ASTE/data/output/${Save:postfix}
+output_dir = projects/EMCGCN-ASTE/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 500
+num_train_epochs= 50
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
-early_stop_mode = 0
+early_stop_mode = -1
 do_train= true
-do_eval= False
+do_eval= true
 do_predict= False
 # None, steps, epoch
 evaluation_strategy= epoch
-eval_steps= 4500
-per_device_train_batch_size= 2
+eval_steps= 100
+per_device_train_batch_size= 16
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 2
+per_device_eval_batch_size= 16
 eval_accumulation_steps= 1
 seed= 42
 fp16= True
@@ -50,8 +50,9 @@ swa_lr = 5e-6
 swa_freq = 200
 lookahead_alpha = 0.8
 lookahead_K = 5
+# pin_memory=true是如果报错：Warning: Leaking Caffe2 thread-pool after fork， 则改为false就没有了
 dataloader_pin_memory= true
-dataloader_num_workers= 2
+dataloader_num_workers= 8
 
 # ----------------- Optimizer and Scheduler args -------------------------
 
@@ -70,7 +71,7 @@ lr_scheduler_type= linear
 # Linear warmup over warmup_ratio fraction of total steps.
 warmup_ratio= 0.0
 # Linear warmup over warmup_steps.
-warmup_steps= 1000
+warmup_steps= 0
 
 # -----------------------------logging and checkpoints args -------------------------------
 # [no, steps, epoch]
@@ -92,7 +93,7 @@ save_total_limit= 1
 save_on_each_node= false
 # If True, use gradient checkpointing to save memory at the expense of slower backward pass.
 gradient_checkpointing= false
-convert_features_in_run_time = True
+convert_features_in_run_time = true
 
 [Save]
 postfix = debug
@@ -101,6 +102,7 @@ best_model_file = ${Trainer:output_dir}/best_model/best.pt
 log_file = ${Trainer:output_dir}/log_${postfix}.txt
 dev_pred_file = ${Save:temp_dir}/dev_pred_file.json
 test_pred_file = ${Save:temp_dir}/test_pred_file.json
+load_dataset_from_pkl = False
 
 [Network]
 do_hp_search = False
@@ -122,7 +124,7 @@ train_data_repeat = -1
 add_dev_data_to_train = False
 pretrain_model_path = bert-base-chinese
 max_seq_len = 102
-max_train_num = -1
+max_train_num = 20000
 max_dev_num = -1
 
 
