EMCGCN复现还未完成，需要继续

--- a/projects/EMCGCN-ASTE/main.cfg
+++ b/projects/EMCGCN-ASTE/main.cfg
@@ -11,9 +11,9 @@ do_predict= False
 # None, steps, epoch
 evaluation_strategy= epoch
 eval_steps= 100
-per_device_train_batch_size= 16
+per_device_train_batch_size= 2
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 16
+per_device_eval_batch_size= 2
 eval_accumulation_steps= 1
 seed= 42
 fp16= True
@@ -121,11 +121,11 @@ task = 'triplet'
 [data]
 vocab_file = projects/EMCGCN-ASTE/data/vocab.pkl
 train_data_repeat = -1
-add_dev_data_to_train = False
+add_dev_data_to_train = true
 pretrain_model_path = bert-base-chinese
 max_seq_len = 102
-max_train_num = 20000
-max_dev_num = -1
+max_train_num = 2
+max_dev_num = 20
 
 
 
