--- a/projects/RRG/main.cfg
+++ b/projects/RRG/main.cfg
@@ -2,7 +2,7 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 500
+num_train_epochs= 20
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
@@ -12,9 +12,9 @@ do_predict= False
 evaluation_strategy= epoch
 eval_steps= 100
 learning_rate= 1e-4
-per_device_train_batch_size= 2
+per_device_train_batch_size= 64
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 2
+per_device_eval_batch_size= 32
 eval_accumulation_steps= 1
 seed= 42
 metric_for_best_model= ppl
@@ -34,7 +34,7 @@ convert_features_in_run_time = True
 
 
 [Save]
-postfix = debug
+postfix = daily
 temp_dir = ${Trainer:output_dir}/temp_dir
 dev_pred_file = ${Save:temp_dir}/dev_pred.json
 test_pred_file = ${Save:temp_dir}/test_pred.json
@@ -62,8 +62,8 @@ train_data_repeat = -1
 # 是否把验证集数据也加入训练
 add_dev_data_to_train = true
 max_seq_len = 128
-max_train_num = 1
-max_dev_num = 20
+max_train_num = -1
+max_dev_num = -1
 
 
 
