--- a/projects/RRG/main.cfg
+++ b/projects/RRG/main.cfg
@@ -2,7 +2,7 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 20
+num_train_epochs= 25
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
@@ -11,7 +11,7 @@ do_predict= False
 # None, steps, epoch
 evaluation_strategy= epoch
 eval_steps= 100
-learning_rate= 1e-4
+learning_rate= 1e-3
 per_device_train_batch_size= 64
 gradient_accumulation_steps= 1
 per_device_eval_batch_size= 32
@@ -23,7 +23,7 @@ greater_is_better= false
 label_names= [tgt_input_ids]
 dataloader_pin_memory= true
 dataloader_num_workers= 2
-fp16= None
+fp16= true
 disable_tqdm= False
 report_to= [tensorboard]
 save_strategy= ${evaluation_strategy} 
@@ -60,7 +60,7 @@ vocab_file = ${Data:global_dir}/data_daily/processed/vocab.pkl
 pretrained_model_name_or_path = bert-base-uncased
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
-add_dev_data_to_train = true
+add_dev_data_to_train = false
 max_seq_len = 128
 max_train_num = -1
 max_dev_num = -1
