--- a/projects/RRG/main_chinese.cfg
+++ b/projects/RRG/main_chinese.cfg
@@ -11,7 +11,7 @@ do_predict= False
 # None, steps, epoch
 evaluation_strategy= epoch
 eval_steps= 100
-learning_rate= 1e-3
+learning_rate= 3e-4
 per_device_train_batch_size= 32
 gradient_accumulation_steps= 1
 per_device_eval_batch_size= 32
@@ -58,7 +58,7 @@ vocab_file = ${Data:global_dir}/data/vocab.pkl
 pretrained_model_name_or_path = bert-base-chinese
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
-add_dev_data_to_train = true
+add_dev_data_to_train = false
 max_seq_len = 390
 max_train_num = -1
 max_dev_num = -1
