--- a/projects/RRG/main.cfg
+++ b/projects/RRG/main.cfg
@@ -2,7 +2,7 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 25
+num_train_epochs= 30
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
@@ -10,11 +10,11 @@ do_eval= true
 do_predict= False
 # None, steps, epoch
 evaluation_strategy= epoch
-eval_steps= 100
-learning_rate= 1e-3
+eval_steps= 1000
+learning_rate= 1e-4
 per_device_train_batch_size= 64
-gradient_accumulation_steps= 1
-per_device_eval_batch_size= 32
+gradient_accumulation_steps= 2
+per_device_eval_batch_size= 64
 eval_accumulation_steps= 1
 seed= 42
 metric_for_best_model= ppl
@@ -30,11 +30,12 @@ save_strategy= ${evaluation_strategy}
 save_steps= ${eval_steps}
 save_total_limit= 1
 convert_features_in_run_time = True
-
+warmup_steps = 2000
+lr_scheduler_type = constant_with_warmup
 
 
 [Save]
-postfix = daily
+postfix = debug
 temp_dir = ${Trainer:output_dir}/temp_dir
 dev_pred_file = ${Save:temp_dir}/dev_pred.json
 test_pred_file = ${Save:temp_dir}/test_pred.json
@@ -49,7 +50,7 @@ max_trials = 10
 ada_temp = 1.5
 max_gen_length = 30
 num_beams = 1
-do_sample = false
+do_sample = true
 
 
 [Data]
