--- a/projects/RRG/main.cfg
+++ b/projects/RRG/main.cfg
@@ -2,16 +2,16 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 30
+num_train_epochs= 100
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
 do_eval= true
-do_predict= False
+do_predict= true
 # None, steps, epoch
 evaluation_strategy= epoch
-eval_steps= 1000
-learning_rate= 1e-4
+eval_steps= 100
+learning_rate= 5e-4
 per_device_train_batch_size= 64
 gradient_accumulation_steps= 2
 per_device_eval_batch_size= 64
@@ -35,7 +35,7 @@ lr_scheduler_type = constant_with_warmup
 
 
 [Save]
-postfix = debug
+postfix = daily_100
 temp_dir = ${Trainer:output_dir}/temp_dir
 dev_pred_file = ${Save:temp_dir}/dev_pred.json
 test_pred_file = ${Save:temp_dir}/test_pred.json
@@ -50,15 +50,16 @@ max_trials = 10
 ada_temp = 1.5
 max_gen_length = 30
 num_beams = 1
-do_sample = true
-
+do_sample = false
+# ori_ada, ori_bart, ada_bart
+model_type = ori_ada
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
 global_dir = [E:/projects/code_data/RRG, projects/RRG]
 vocab_file = ${Data:global_dir}/data_daily/processed/vocab.pkl
-# 'fnlp/bart-base-chinese'
-pretrained_model_name_or_path = bert-base-uncased
+# fnlp/bart-base-chinese, bert-base-uncased, facebook/bart-base
+pretrained_model_name_or_path = facebook/bart-base
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
 add_dev_data_to_train = false
