--- a/projects/RRG/main_chinese.cfg
+++ b/projects/RRG/main_chinese.cfg
@@ -55,6 +55,7 @@ do_sample = false
 # 按照如下顺序进行选择数据存储和输出目录
 global_dir = [E:/projects/code_data/RRG, projects/RRG]
 vocab_file = ${Data:global_dir}/data/vocab.pkl
+# fnlp/bart-base-chinese
 pretrained_model_name_or_path = bert-base-chinese
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
