--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,24 @@
 			"justMyCode": false
 		},
 		{
+			"name": "Python: exampley.py",
+			"type": "python",
+			"request": "launch",
+			"program": "exampley.py",
+			"args": [
+				"--dataset_name", "xsum",
+				"--model_name_or_path", "facebook/bart-base",
+				"--do_train","--do_eval",
+				"--output_dir","projects/RRG/outs/sum",
+				"--per_device_train_batch_size=4",
+				"--per_device_eval_batch_size=4",
+				"--overwrite_output_dir",
+				"--predict_with_generate"
+			],
+			"console": "integratedTerminal",
+			"justMyCode": false
+		},
+		{
 			"name": "Python: main-chinese",
 			"type": "python",
 			"request": "launch",
