--- a/projects/RRG/main_chinese.cfg
+++ b/projects/RRG/main_chinese.cfg
@@ -7,10 +7,10 @@ num_train_epochs= 50
 early_stop_mode = -1
 do_train= true
 do_eval= true
-do_predict= False
+do_predict= true
 # None, steps, epoch
 evaluation_strategy= epoch
-eval_steps= 100
+eval_steps= 10
 learning_rate= 3e-4
 per_device_train_batch_size= 32
 gradient_accumulation_steps= 1
