修改了评测代码

--- a/projects/RRG/main_chinese.cfg
+++ b/projects/RRG/main_chinese.cfg
@@ -11,15 +11,15 @@ do_predict= true
 # None, steps, epoch
 evaluation_strategy= epoch
 eval_steps= 10
-learning_rate= 3e-4
+learning_rate= 2e-4
 per_device_train_batch_size= 32
 gradient_accumulation_steps= 1
 per_device_eval_batch_size= 32
 eval_accumulation_steps= 1
 seed= 42
-metric_for_best_model= ppl
+metric_for_best_model= acc
 # 决定 metric_for_best_model 是越大越好，还是越小越好。比如loss是越小越好
-greater_is_better= false
+greater_is_better= true
 label_names= [tgt_input_ids]
 dataloader_pin_memory= true
 dataloader_num_workers= 3
@@ -31,7 +31,7 @@ save_steps= ${eval_steps}
 save_total_limit= 1
 convert_features_in_run_time = True
 warmup_steps = 2000
-# lr_scheduler_type = constant_with_warmup
+lr_scheduler_type = constant_with_warmup
 adam_beta2=0.9
 adam_epsilon = 1e-10
 
@@ -55,17 +55,17 @@ num_beams = 1
 do_sample = false
 # ori_ada, ori_bart, ada_bart
 model_type = ori_ada
-dropout = 0.4
-attn_dropout = 0.4
+dropout = 0.25
+attn_dropout = 0.25
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
 global_dir = [E:/projects/code_data/RRG, projects/RRG]
 vocab_file = ${Data:global_dir}/data/vocab.pkl
 # fnlp/bart-base-chinese , bert-base-chinese
-pretrained_model_name_or_path = bert-base-chinese
+pretrained_model_name_or_path = fnlp/bart-base-chinese
 # en , zh
-language = en
+language = zh
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
 add_dev_data_to_train = false
