--- a/projects/RRG/main.cfg
+++ b/projects/RRG/main.cfg
@@ -11,15 +11,15 @@ do_predict= true
 # None, steps, epoch
 evaluation_strategy= epoch
 eval_steps= 1000
-learning_rate= 2e-4
+learning_rate= 1e-4
 per_device_train_batch_size= 100
 gradient_accumulation_steps= 1
 per_device_eval_batch_size= 32
 eval_accumulation_steps= 1
 seed= 42
-metric_for_best_model= ppl
+metric_for_best_model= acc
 # 决定 metric_for_best_model 是越大越好，还是越小越好。比如loss是越小越好
-greater_is_better= false
+greater_is_better= true
 label_names= [tgt_input_ids]
 dataloader_pin_memory= true
 dataloader_num_workers= 2
@@ -31,7 +31,7 @@ save_steps= ${eval_steps}
 save_total_limit= 1
 convert_features_in_run_time = True
 warmup_steps = 2000
-# lr_scheduler_type = constant_with_warmup
+lr_scheduler_type = constant_with_warmup
 adam_beta2=0.9
 adam_epsilon = 1e-10
 
@@ -55,8 +55,8 @@ num_beams = 1
 do_sample = false
 # ori_ada, ori_bart, ada_bart
 model_type = ori_ada
-dropout = 0.4
-attn_dropout = 0.4
+dropout = 0.25
+attn_dropout = 0.25
 
 
 [Data]
@@ -73,10 +73,6 @@ add_dev_data_to_train = false
 max_seq_len = 128
 max_train_num = -1
 max_dev_num = -1
-
-
-
-
 
 
 
