整理下代码

--- a/projects/main_chinese.cfg
+++ b/projects/main_chinese.cfg
@@ -2,7 +2,7 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 25
+num_train_epochs= 30
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
@@ -12,7 +12,7 @@ do_predict= true
 evaluation_strategy= epoch
 eval_steps= 10
 learning_rate= 3e-4
-per_device_train_batch_size= 32
+per_device_train_batch_size= 16
 gradient_accumulation_steps= 1
 per_device_eval_batch_size= 32
 eval_accumulation_steps= 1
@@ -22,7 +22,7 @@ metric_for_best_model= acc
 greater_is_better= true
 label_names= [tgt_input_ids]
 dataloader_pin_memory= true
-dataloader_num_workers= 3
+dataloader_num_workers= 2
 fp16= true
 disable_tqdm= False
 report_to= [tensorboard]
@@ -51,18 +51,18 @@ do_hp_search = False
 hp_search_name = []
 max_trials = 10
 ada_temp = 1.5
-max_gen_length = 120
+max_gen_length = 256
 num_beams = 1
 do_sample = false
 # ori_ada, ori_bart, ada_bart
 model_type = ori_ada
-dropout = 0.2
-attn_dropout = 0.2
+dropout = 0.25
+attn_dropout = 0.25
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
-global_dir = [E:/projects/code_data/, projects/]
-vocab_file = ${Data:global_dir}/data/vocab.pkl
+global_dir = [E:/projects/code_data, projects]
+vocab_file = ${Data:global_dir}/data/processed/vocab.pkl
 # fnlp/bart-base-chinese , bert-base-chinese
 pretrained_model_name_or_path = fnlp/bart-base-chinese
 # en , zh
