--- a/projects/main_chinese.cfg
+++ b/projects/main_chinese.cfg
@@ -12,9 +12,9 @@ do_predict= true
 evaluation_strategy= epoch
 eval_steps= 10
 learning_rate= 3e-4
-per_device_train_batch_size= 16
+per_device_train_batch_size= 8
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 32
+per_device_eval_batch_size= 8
 eval_accumulation_steps= 1
 seed= 42
 metric_for_best_model= acc
@@ -47,6 +47,7 @@ log_file = ${Trainer:output_dir}/log_${postfix}.txt
 
 
 [Network]
+non_pretrain_lr = 2e-4
 do_hp_search = False
 hp_search_name = []
 max_trials = 10
@@ -63,7 +64,7 @@ attn_dropout = 0.25
 # 按照如下顺序进行选择数据存储和输出目录
 global_dir = [E:/projects/code_data, projects]
 vocab_file = ${Data:global_dir}/data/processed/vocab.pkl
-# fnlp/bart-base-chinese , bert-base-chinese
+# fnlp/bart-base-chinese , bert-base-chinese, facebook/bart-base
 pretrained_model_name_or_path = fnlp/bart-base-chinese
 # en , zh
 language = zh
