--- a/projects/main.cfg
+++ b/projects/main.cfg
@@ -62,7 +62,7 @@ attn_dropout = 0.25
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
-global_dir = [E:/projects/code_data/RRG, projects/RRG]
+global_dir = [E:/projects/code_data, projects]
 vocab_file = ${Data:global_dir}/data_daily/processed/vocab.pkl
 # fnlp/bart-base-chinese (cls=bos=0, pad=1, sep=eos=decoder_start_token_id=2), bert-base-uncased, facebook/bart-base
 pretrained_model_name_or_path = facebook/bart-base
