--- a/projects/main_chinese.cfg
+++ b/projects/main_chinese.cfg
@@ -2,7 +2,7 @@
 # The output directory where the model predictions and checkpoints will be written.
 output_dir = ${Data:global_dir}/outs/${Save:postfix}
 resume_from_checkpoint= None
-num_train_epochs= 8
+num_train_epochs= 30
 # -1代表关闭，0代表连续 4 轮没提升就停止训练，>0的数字代表具体的哪一轮停止
 early_stop_mode = -1
 do_train= true
@@ -12,9 +12,9 @@ do_predict= true
 evaluation_strategy= epoch
 eval_steps= 10
 learning_rate= 3e-4
-per_device_train_batch_size= 8
+per_device_train_batch_size= 16
 gradient_accumulation_steps= 1
-per_device_eval_batch_size= 8
+per_device_eval_batch_size= 16
 eval_accumulation_steps= 1
 seed= 42
 metric_for_best_model= acc
@@ -22,7 +22,7 @@ metric_for_best_model= acc
 greater_is_better= true
 label_names= [tgt_input_ids]
 dataloader_pin_memory= true
-dataloader_num_workers= 2
+dataloader_num_workers= 3
 fp16= true
 disable_tqdm= False
 report_to= [tensorboard]
@@ -56,9 +56,12 @@ max_gen_length = 256
 num_beams = 1
 do_sample = false
 # ori_ada, ori_bart, ada_bart
-model_type = ori_ada
+model_type = ori_bart
 dropout = 0.25
 attn_dropout = 0.25
+add_triples = True
+# 训练阶段验证集是否需要生成结果
+generate_in_eval = false
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
@@ -71,7 +74,7 @@ language = zh
 train_data_repeat = -1
 # 是否把验证集数据也加入训练
 add_dev_data_to_train = false
-max_seq_len = 390
+max_seq_len = 300
 max_train_num = -1
 max_dev_num = -1
 
