--- a/projects/debug.cfg
+++ b/projects/debug.cfg
@@ -62,8 +62,7 @@ attn_dropout = 0.25
 add_triples = True
 # 训练阶段验证集是否需要生成结果
 generate_in_eval = false
-use_copy_mechanism = False
-share_encoder_for_pi = False
+use_copy_mechanism = True
 
 [Data]
 # 按照如下顺序进行选择数据存储和输出目录
